[workspace]
resolver = "3"
members = ["admin", "ctrl", "dns", "launcher", "proxied", "proxying", "shared"]

[workspace.dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
console_error_panic_hook = "0.1"
include_dir = "0.7"
leptos = { version = "0.6", default-features = false }
leptos_actix = { version = "0.6", default-features = false }
leptos_config = { version = "0.6" }
leptos_meta = { version = "0.6", default-features = false }
leptos_router = { version = "0.6", default-features = false }
mime_guess = "2"
minreq = { version = "2", features = ["https-native"] }
postcard = { version = "1", features = ["use-std"] }
rand = "0.8"
redis = { version = "0.32", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
shared = { path = "shared" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
wasm-bindgen = "0.2"

[[workspace.metadata.leptos]]
name = "ctrl"
bin-package = "ctrl"
lib-package = "ctrl"

[profile.release]
panic = "abort"
lto = true

[profile.release.package.proxied]
strip = true
opt-level = "z"
codegen-units = 1

[profile.release.package.proxied-launcher]
strip = true
opt-level = "z"
codegen-units = 1
